k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-microservice
  template:
    metadata:
      labels:
        app: demo-microservice
      annotations:
        last-updated: "0"
    spec:
      containers:
      - name: demo-microservice
        image: image-registry.openshift-image-registry.svc:5000/demo-dev/demo-microservice:latest
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
