k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-microservice
  labels:
    backstage.io/kubernetes-id: demo-microservice  # Added label
spec:
  selector:
    app: demo-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
