k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-microservice
spec:
  to:
    kind: Service
    name: demo-microservice
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
